2009-12-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* doc/aria2c.1.txt

2009-12-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that line separator is missing in horizontal bar.
	* doc/xmlrpc/aria2mon

2009-12-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated usage text for --metalink-file option.
	* src/usage_text.h

2009-12-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	If '-' is given as an argument to --metalink-file option, aria2
	reads Metalink file from stdin.
	* src/OptionHandlerFactory.cc
	* src/OptionHandlerImpl.h
	* src/a2io.h

2009-12-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that aria2 listens wrong port if --interface option
	is used.
	* src/SocketCore.cc

2009-12-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that query parameter in magnet URI is not decoded.
	* src/magnet.cc
	* test/MagnetTest.cc

2009-12-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Specified defaultSize as an argument for easy testing.
	* src/util.cc
	* src/util.h
	* test/UtilTest.cc

2009-12-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.7.1

2009-12-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.7.1
	* configure.ac

2009-12-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug --bt-prioritize-piece=tail is not working.
	* src/util.cc

2009-12-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.7.0

2009-12-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2009-12-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated help message for --bt-prioritize-piece. Some cosmetic
	changes.
	* doc/aria2c.1.txt

2009-12-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Set default value for SIZE in --bt-prioritize-piece to 1MiB.