@@ -706,7 +706,8 @@ option\&.
 .PP
 \fB\-T\fR, \fB\-\-torrent\-file\fR=TORRENT_FILE
 .RS 4
-The path to the \&.torrent file\&. You are not required to use this option because you can specify a torrent file without \-T\&.
+The path to the \&.torrent file\&. You are not required to use this option because you can specify \&.torrent files without
+\fB\-T\fR\&.
 .RE
 .SS "Metalink Specific Options"
 .PP
@@ -726,7 +727,10 @@ is specified, the action mentioned above is not taken\&. Default:
 .PP
 \fB\-M\fR, \fB\-\-metalink\-file\fR=METALINK_FILE
 .RS 4
-The file path to \&.metalink file\&. You are not required to use this option because you can specify a metalink file without \-M\&.
+The file path to \&.metalink file\&. Reads input from stdin when
+\fI\-\fR
+is specified\&. You are not required to use this option because you can specify \&.metalink files without
+\fB\-M\fR\&.
 .RE
 .PP
 \fB\-C\fR, \fB\-\-metalink\-servers\fR=NUM_SERVERS
