@@ -1451,8 +1451,8 @@ writes the piece to the appropriate files.</td>
 </dt>
 <dd>
 <p>
-  The path to the .torrent file.
-  You are not required to use this option because you can specify a torrent file without -T.
+  The path to the .torrent file.  You are not required to use this
+  option because you can specify .torrent files without <strong>-T</strong>.
 </p>
 </dd>
 </dl></div>
@@ -1477,8 +1477,9 @@ writes the piece to the appropriate files.</td>
 </dt>
 <dd>
 <p>
-  The file path to .metalink file. You are not required to use this option because you can
-  specify a metalink file without -M.
+  The file path to .metalink file. Reads input from stdin when <em>-</em> is
+  specified.  You are not required to use this option because you can
+  specify .metalink files without <strong>-M</strong>.
 </p>
 </dd>
 <dt class="hdlist1">
@@ -3460,7 +3461,7 @@ files in the program, then also delete it here.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-12-06 21:18:41 JST
+Last updated 2009-12-10 21:23:54 JST
 </div>
 </div>
 </body>
